changes to indes

--- a/about.html
+++ b/about.html
@@ -54,8 +54,10 @@
 				<br/>
 				<p>Another goal of mine is to continue bettering myself. I have had many struggles in life and it's important to me to be able to live life to its 	fullest extent as best I can.</p>
 				<br/>
+				<p>This is a test of how git works.</p>
+				<br/>
 				<h2>My Links</h2>
-			
+	<p>This is a test of using the vim editor.</p>	
 				<a href="http://www.linkedin.com/pub/amara-roberts/6a/ba0/497/">My LinkedIn Profile</a>
 				<br/>
 				<a href="http://www.youtube.com/playlist?list=FLJNnBon-nb09c0SBhHdGYlA">My YouTube favorites</a>
