added a test paragraph

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
 		</div>
 	</div>
 	
-	<div class="content"><p>Here's a secondary test of how vim editing works.</p> </div>
+	<div class="content"><p>here's a tertiary test of this crep</p>
+<p>Here's a secondary test of how vim editing works.</p> </div>
 	
 	<div class="footer">
 		<p>All content by <a href="mailto:amararbrts@gmail.com">Amara Roberts</a></p>
