--- a/about.html
+++ b/about.html
@@ -47,6 +47,10 @@
 					<li>Dedicated</li>			
 					<li>Thoughtful</li>			
 					<li>Crafty</li>		
+					<li>Pickled</li>
+					<li>Tickled</li>
+					<li>pugnacious</li>
+					<li>impractical</li>
 				</ol>
 				<br/>
 				<h2>My Goals</h2>
