--- a/about.html
+++ b/about.html
@@ -57,6 +57,7 @@
 				<p>A goal of mine is to have a stable career. I would like to be able to support myself and my family without having any trouble. The field that I would like to go into is programming, because it's very interesting to me. I find myself more interested in things like JavaScript because I get to challenge myself constantly to solve problems in thoughtful ways.</p>
 				<br/>
 				<p>Another goal of mine is to continue bettering myself. I have had many struggles in life and it's important to me to be able to live life to its 	fullest extent as best I can.</p>
+				<p>this is a whole nother testing paragraph i really hope it works because maybe im getting the hang of this.</p>
 				<br/>
 				<p>This is a test of how git works.</p>
 				<br/>
