added two testing paragraphs

--- a/index.html
+++ b/index.html
@@ -31,7 +31,10 @@
 		</div>
 	</div>
 	
-	<div class="content"><p>Here's a secondary test of how vim editing works.</p> </div>
+	<div class="content"><p>Here's a secondary test of how vim editing works.</p>
+	<p>here are a little baby paragraphs to see how hotfixing / switching branches / stuff like that works</p>
+	<p>here are a little baby paragraphs to see how hotfixing / switching branches / stuff like that works</p>
+	 </div>
 	
 	<div class="footer">
 		<p>All content by <a href="mailto:amararbrts@gmail.com">Amara Roberts</a></p>
