--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		</div>
 	</div>
 	
-	<div class="content"><p>testing more commits</p><p>here's a tertiary test of this crep</p>
+	<div class="content"><p>testing more commits</p><p>i think i finally fucking get it FINALLY</p><p>here's a tertiary test of this crep</p>
 <p>Here's a secondary test of how vim editing works.</p> </div>
 	
 	<div class="footer">
